--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -9,7 +9,7 @@ pipeline {
     stage('Checkout') {
       steps {
         sh 'echo passed'
-        //git branch: 'main', url: 'https://github.com//anuragnp1997/Jenkins-Zero-To-Hero.git'
+        //git branch: 'main', url: 'https://github.com/anuragnp1997/Jenkins-Zero-To-Hero.git'
       }
     }
     stage('Build and Test') {
@@ -37,38 +37,43 @@ pipeline {
       }
       steps {
         script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                dockerImage.push()
-            }
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+          def dockerImage = docker.image("${DOCKER_IMAGE}")
+          docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+            dockerImage.push()
+          }
         }
-stage('Update Deployment File') {
-    environment {
+      }
+    } // <-- Closing brace for 'Build and Push Docker Image' stage
+
+    stage('Update Deployment File') {
+      environment {
         GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
         GIT_USER_NAME = "anuragnp1997"
-    }
-    steps {
+      }
+      steps {
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-            sh '''
-                git config user.email "anuragnp97@gmail.com"
-                git config user.name "anuragnp"
-                
-                echo "Build number is ${BUILD_NUMBER}"
-                
-                echo "Before replacement:"
-                cat java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+          sh '''
+            git config user.email "anuragnp97@gmail.com"
+            git config user.name "anuragnp"
+            
+            echo "Build number is ${BUILD_NUMBER}"
+            
+            echo "Before replacement:"
+            cat java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
-                BUILD_NUMBER=${BUILD_NUMBER}
-                sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            BUILD_NUMBER=${BUILD_NUMBER}
+            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
-                echo "After replacement:"
-                cat java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            echo "After replacement:"
+            cat java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
-                git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-            '''
+            git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+          '''
         }
+      }
     }
+  }
 }
